# Ziphu-Term

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/glm_coder/: agent.py  cli.py  config.py  display.py  history.py  llm_client.py  logger.py  repl.py
src/glm_coder/tools/: __init__.py  base.py  file_ops.py  search.py  shell.py
